# srtextractor

./: CMakeLists.txt  README.md  extract.sh  makesrt.sh  translate.sh
src/: main.cpp  reader.cpp  srtextract.cpp  srtextract.h  srtextractor.cpp  srtreader.cpp  srtreader.h  srtwriter.cpp  srtwriter.h  writer.cpp
srtreader/: CMakeLists.txt
